16 Feb 2010 Fix Conditional SSKE failing with Storage Key Assist - Ivan Warren
04 Feb 2010 - Fix building on 64-bit Macs under Snow Leopard - Jay Maynard
16 Dec 2009 Fix S/370 SIE guests - Ivan Warren
14 Jun 2009 uptime command - Fish
14 Jun 2009 Support expanded storage sizes exceeding 4GB (64-bit only) - Roger Bowler
05 Jun 2009 Visual Studio 2008 + makefile.bat x64 & runjobs support - Fish
02 Jun 2009 Miscellaneous minor hetget fixes - kerravon86 by Fish
02 Jun 2009 Configuration Topology Facility support for PTF and STSI - Fish
01 Jun 2009 socket printer support - Fish
01 Jun 2009 New TT32 pre-v3.3 header and stats - Fish
01 Jun 2009 Fix OMA (TDF) unloaded tape open bug - kerravon86 by Fish
01 Jun 2009 Support for non-default Windows tape device names - Fish
01 Jun 2009 Fix tape file extension neutrality special case - Fish
15 May 2009 Add 3705 device - Jay Maynard, for Max H. Parke
13 May 2009 Add TTY and 2741 support to 2703 - Jay Maynard, for Max H. Parke
03 May 2009 Disable SENSE ID CCW for 2311, 2314 subject to LEGACYSENSEID setting,
            change 2314 control unit from 2841 to 2314 - Kevin Leonard
27 Apr 2009 Fix scsitape open hang on *nix causing Machine Check - Fish by rbowler
19 Apr 2009 MAXCPU configuration statement - Roger Bowler
19 Apr 2009 CMPSC expand works optimized with absolute addresses - Bernard
17 Mar 2009 Changed "notrunc" to "noclear" and fix compile error on MSVC -
            Jay Maynard
15 Mar 2009 Added "notrunc" option to printer and punch devices to not
            truncate output file uopn opening - Jay Maynard
11 Mar 2009 CMPSC expand output cache implementation - Bernard van der Helm
01 Mar 2009 Complete DIAGNOSE X'24' and Implement DIAGNOSE X'210' - Harold Grovesteen
27 Feb 2009 >70% better CMPSC expand performance - Bernard van der Helm
22 Feb 2009 30% better CMPSC expand performance - Bernard van der Helm
20 Feb 2009 Implement VM DIAGNOSE X'260' - Harold Grovesteen