@@ -116,6 +116,18 @@ HHCIN008S DYNGUI.DLL load failed; Hercules terminated.
   <dt>Issued by
   <dd>impl.c, function main
   </dl>
+<dt><code><a name="HHCIN009S">
+HHCIN009S Cannot register SIGTERM handler: <em>error</em>
+</a></code>
+<dd><dl>
+  <dt>Meaning
+  <dd>An attempt to register a handler for the SIGTERM signal failed. The
+error is described by <code><em>error</em></code>.
+  <dt>Action
+  <dd>Correct the error and restart Hercules.
+  <dt>Issued by
+  <dd>impl.c, function main
+  </dl>
 <dt><code><a name="HHCIN099I">
 HHCIN099I Hercules terminated
 </a></code>
