@@ -1,5 +1,6 @@
+10 Mar 2010 Add SIGTERM handler to cleanly shut down clients - Frans Pop
 16 Feb 2010 Fix Conditional SSKE failing with Storage Key Assist - Ivan Warren
-04 Feb 2010 - Fix building on 64-bit Macs under Snow Leopard - Jay Maynard
+04 Feb 2010 Fix building on 64-bit Macs under Snow Leopard - Jay Maynard
 16 Dec 2009 Fix S/370 SIE guests - Ivan Warren
 14 Jun 2009 uptime command - Fish
 14 Jun 2009 Support expanded storage sizes exceeding 4GB (64-bit only) - Roger Bowler
